.metadata/.plugins/org.eclipse.cdt.ui/one.build.log
07:57:35 **** Incremental Build of configuration Debug for project one ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\one.o" "..\\src\\one.c" 
..\src\one.c: In function 'main':
..\src\one.c:15:8: error: 'b' undeclared (first use in this function)
  int a;b;
        ^
..\src\one.c:15:8: note: each undeclared identifier is reported only once for each function it appears in

07:57:35 Build Failed. 1 errors, 0 warnings. (took 128ms)

